Add service interfaces